Modernize and optimize serialization (#398)
* Update to Java 21
* Adjust code with minor optimizations
* No externally observable changes