@@ -15,19 +15,13 @@
  */
 package org.joda.beans.ser.map;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 
 import org.joda.beans.Bean;
-import org.joda.beans.BeanBuilder;
 import org.joda.beans.JodaBeanUtils;
-import org.joda.beans.MetaBean;
 import org.joda.beans.MetaProperty;
 import org.joda.beans.ser.JodaBeanSer;
-import org.joda.beans.ser.SerCategory;
-import org.joda.beans.ser.SerDeserializer;
 import org.joda.beans.ser.SerIterable;
 import org.joda.beans.ser.SerIteratorFactory;
 import org.joda.beans.ser.SerOptional;
@@ -87,30 +81,30 @@ public class JodaBeanSimpleMapReader {
      * @return the bean, not null
      * @throws Exception if an error occurs
      */
-    private <T> T parseRoot(Map<String, Object> input, Class<T> declaredType) throws Exception {
-        Object parsed = parseBean(input, declaredType);
+    private <T> T parseRoot(Map<String, Object> input, Class<T> declaredType) {
+        var parsed = parseBean(input, declaredType);
         return declaredType.cast(parsed);
     }
 
     // parse a bean, event after object start passed in
     private Object parseBean(Map<String, Object> input, Class<?> beanType) {
-        String propName = "";
+        var propName = "";
         try {
-            SerDeserializer deser = settings.getDeserializers().findDeserializer(beanType);
-            MetaBean metaBean = deser.findMetaBean(beanType);
-            BeanBuilder<?> builder = deser.createBuilder(beanType, metaBean);
-            for (Entry<String, Object> entry : input.entrySet()) {
+            var deser = settings.getDeserializers().findDeserializer(beanType);
+            var metaBean = deser.findMetaBean(beanType);
+            var builder = deser.createBuilder(beanType, metaBean);
+            for (var entry : input.entrySet()) {
                 // property name
                 propName = entry.getKey();
-                MetaProperty<?> metaProp = deser.findMetaProperty(beanType, metaBean, propName);
+                var metaProp = deser.findMetaProperty(beanType, metaBean, propName);
                 // ignore unknown properties
                 if (metaProp != null && !metaProp.style().isDerived()) {
-                    Object value = parseObject(
-                            entry.getValue(), SerOptional.extractType(metaProp, beanType), metaProp, beanType, null);
+                    var declaredType = SerOptional.extractType(metaProp, beanType);
+                    var value = parseProperty(entry.getValue(), declaredType, metaProp, beanType);
                     deser.setValue(builder, metaProp, SerOptional.wrapValue(metaProp, beanType, value));
                 }
-                propName = "";
             }
+            propName = "";
             return deser.build(beanType, builder);
         } catch (Exception ex) {
             throw new IllegalArgumentException(
@@ -118,83 +112,96 @@ public class JodaBeanSimpleMapReader {
         }
     }
 
-    // parse object, event passed in
-    @SuppressWarnings("unchecked")
-    private Object parseObject(
+    // parse an object defined by a meta-property, event passed in
+    private Object parseProperty(
             Object input,
             Class<?> declaredType,
             MetaProperty<?> metaProp,
-            Class<?> beanType,
-            SerIterable parentIterable) throws Exception {
+            Class<?> beanType) {
 
         // parse based on type
         if (Bean.class.isAssignableFrom(declaredType)) {
-            if (input instanceof Map) {
-                return parseBean((Map<String, Object>) input, declaredType);
+            return parseObjectAsBean(input, declaredType);
+        } else if (input instanceof List || input instanceof Map) {
+            var childIterable = settings.getIteratorFactory().createIterable(metaProp, beanType, true);
+            return childIterable != null ?
+                    parseIterable(input, childIterable) :
+                    parseObjectAsCollection(input, declaredType);
+        } else {
+            return parseSimple(input, declaredType);
+        }
+    }
+
+    // parse an object within a collection
+    private Object parseObject(
+            Object input,
+            Class<?> declaredType,
+            SerIterable parentIterableOrNull) {
+
+        if (Bean.class.isAssignableFrom(declaredType)) {
+            return parseObjectAsBean(input, declaredType);
+        } else if (input instanceof List || input instanceof Map) {
+            var childIterable = parentIterableOrNull != null ?
+                    settings.getIteratorFactory().createIterable(parentIterableOrNull) :
+                    null;
+            return childIterable != null ?
+                    parseIterable(input, childIterable) :
+                    parseObjectAsCollection(input, declaredType);
+        } else {
+            return parseSimple(input, declaredType);
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    private Object parseObjectAsBean(Object input, Class<?> declaredType) {
+        if (input instanceof Map) {
+            return parseBean((Map<String, Object>) input, declaredType);
+        } else {
+            return parseSimple(input, declaredType);
+        }
+    }
+
+    private Object parseObjectAsCollection(Object input, Class<?> declaredType) {
+        if (input instanceof List<?> inputList) {
+            if (declaredType.isArray()) {
+                return parseIterableArray(inputList, SerIteratorFactory.array(declaredType.getComponentType()));
             } else {
-                return parseSimple(input, declaredType);
+                return parseIterableArray(inputList, SerIteratorFactory.list(Object.class, List.of()));
             }
         } else {
-            if (input instanceof List || input instanceof Map) {
-                SerIterable childIterable = null;
-                if (metaProp != null) {
-                    childIterable = settings.getIteratorFactory().createIterable(metaProp, beanType, true);
-                } else if (parentIterable != null) {
-                    childIterable = settings.getIteratorFactory().createIterable(parentIterable);
-                }
-                if (childIterable == null) {
-                    if (input instanceof List) {
-                        if (declaredType.isArray()) {
-                            childIterable = SerIteratorFactory.array(declaredType.getComponentType());
-                        } else {
-                            childIterable = SerIteratorFactory.list(Object.class, Collections.emptyList());
-                        }
-                    } else {
-                        childIterable = SerIteratorFactory.map(
-                                String.class, Object.class, Collections.emptyList());
-                    }
-                }
-                return parseIterable(input, childIterable);
-            } else {
-                return parseSimple(input, declaredType);
-            }
+            return parseIterableMap(input, SerIteratorFactory.map(String.class, Object.class, List.of()));
         }
     }
 
     //-----------------------------------------------------------------------
-    private Object parseIterable(Object input, SerIterable iterable) throws Exception {
-        if (iterable.category() == SerCategory.MAP) {
-            return parseIterableMap(input, iterable);
-        } else if (iterable.category() == SerCategory.COUNTED) {
-            return parseIterableCounted(input, iterable);
-        } else if (iterable.category() == SerCategory.TABLE) {
-            return parseIterableTable(input, iterable);
-        } else if (iterable.category() == SerCategory.GRID) {
-            return parseIterableGrid(input, iterable);
-        } else {
-            return parseIterableArray(input, iterable);
-        }
+    private Object parseIterable(Object input, SerIterable iterable) {
+        return switch (iterable.category()) {
+            case COLLECTION -> parseIterableArray((List<?>) input, iterable);
+            case COUNTED -> parseIterableCounted((List<?>) input, iterable);
+            case MAP -> parseIterableMap(input, iterable);
+            case TABLE -> parseIterableTable((List<?>) input, iterable);
+            case GRID -> parseIterableGrid((List<?>) input, iterable);
+        };
     }
 
     @SuppressWarnings("unchecked")
-    private Object parseIterableMap(Object input, SerIterable iterable) throws Exception {
+    private Object parseIterableMap(Object input, SerIterable iterable) {
         if (input instanceof Map) {
-            for (Entry<String, Object> entry : ((Map<String, Object>) input).entrySet()) {
-                String keyStr = entry.getKey();
-                Object key = convertText(keyStr, iterable.keyType());
-                Object value = parseObject(entry.getValue(), iterable.valueType(), null, null, iterable);
+            for (var entry : ((Map<String, Object>) input).entrySet()) {
+                var keyStr = entry.getKey();
+                var key = convertText(keyStr, iterable.keyType());
+                var value = parseObject(entry.getValue(), iterable.valueType(), iterable);
                 iterable.add(key, null, value, 1);
             }
             return iterable.build();
-        } else if (input instanceof List) {
-            List<?> inputList = (List<?>) input;
-            for (Object inputVal : inputList) {
-                List<?> inputData = (List<?>) inputVal;
+        } else if (input instanceof List<?> inputList) {
+            for (var inputVal : inputList) {
+                var inputData = (List<?>) inputVal;
                 if (inputData.size() != 3) {
                     throw new IllegalArgumentException("Expected table iterable to have entries of size 3");
                 }
-                Object key = parseObject(inputData.get(0), iterable.keyType(), null, null, null);
-                Object value = parseObject(inputData.get(2), iterable.valueType(), null, null, iterable);
+                var key = parseObject(inputData.get(0), iterable.keyType(), null);
+                var value = parseObject(inputData.get(2), iterable.valueType(), iterable);
                 iterable.add(key, null, value, 1);
             }
             return iterable.build();
@@ -203,130 +210,131 @@ public class JodaBeanSimpleMapReader {
         }
     }
 
-    private Object parseIterableTable(Object input, SerIterable iterable) throws Exception {
-        List<?> inputList = (List<?>) input;
-        for (Object inputVal : inputList) {
+    private Object parseIterableTable(List<?> input, SerIterable iterable) {
+        for (var inputVal : input) {
             List<?> inputData = (List<?>) inputVal;
             if (inputData.size() != 3) {
                 throw new IllegalArgumentException("Expected table iterable to have entries of size 3");
             }
-            Object key = parseObject(inputData.get(0), iterable.keyType(), null, null, null);
-            Object col = parseObject(inputData.get(1), iterable.columnType(), null, null, null);
-            Object value = parseObject(inputData.get(2), iterable.valueType(), null, null, iterable);
+            var key = parseObject(inputData.get(0), iterable.keyType(), null);
+            var col = parseObject(inputData.get(1), iterable.columnType(), null);
+            var value = parseObject(inputData.get(2), iterable.valueType(), iterable);
             iterable.add(key, col, value, 1);
         }
         return iterable.build();
     }
 
-    private Object parseIterableGrid(Object input, SerIterable iterable) throws Exception {
-        List<?> inputList = (List<?>) input;
-        if (inputList.size() < 2) {
-            throw new IllegalArgumentException("Expected counted iterable to be size 3");
+    private Object parseIterableGrid(List<?> input, SerIterable iterable) {
+        if (input.size() < 2) {
+            throw new IllegalArgumentException("Expected grid iterable to be size 3");
         }
-        Integer rows = (Integer) inputList.get(0);
-        Integer columns = (Integer) inputList.get(1);
+        var rows = (Integer) input.get(0);
+        var columns = (Integer) input.get(1);
         iterable.dimensions(new int[] {rows, columns});
-        for (Object inputVal : inputList.subList(2, inputList.size())) {
-            List<?> inputData = (List<?>) inputVal;
+        for (var inputVal : input.subList(2, input.size())) {
+            var inputData = (List<?>) inputVal;
             if (inputData.size() != 3) {
                 throw new IllegalArgumentException("Expected grid iterable to have entries of size 3");
             }
-            Integer row = (Integer) inputData.get(0);
-            Integer col = (Integer) inputData.get(1);
-            Object value = parseObject(inputData.get(2), iterable.valueType(), null, null, iterable);
+            var row = (Integer) inputData.get(0);
+            var col = (Integer) inputData.get(1);
+            var value = parseObject(inputData.get(2), iterable.valueType(), iterable);
             iterable.add(row, col, value, 1);
         }
         return iterable.build();
     }
 
-    private Object parseIterableCounted(Object input, SerIterable iterable) throws Exception {
-        List<?> inputList = (List<?>) input;
-        for (Object inputVal : inputList) {
-            List<?> inputData = (List<?>) inputVal;
+    private Object parseIterableCounted(List<?> input, SerIterable iterable) {
+        for (var inputVal : input) {
+            var inputData = (List<?>) inputVal;
             if (inputData.size() != 2) {
                 throw new IllegalArgumentException("Expected counted iterable to have entries of size 2");
             }
-            Object value = parseObject(inputData.get(0), iterable.valueType(), null, null, iterable);
-            Integer count = (Integer) inputData.get(1);
+            var value = parseObject(inputData.get(0), iterable.valueType(), iterable);
+            var count = (Integer) inputData.get(1);
             iterable.add(null, null, value, count);
         }
         return iterable.build();
     }
 
-    private Object parseIterableArray(Object input, SerIterable iterable) throws Exception {
-        List<?> inputList = (List<?>) input;
-        for (Object inputVal : inputList) {
-            Object value = parseObject(inputVal, iterable.valueType(), null, null, iterable);
+    private Object parseIterableArray(List<?> input, SerIterable iterable) {
+        for (var inputVal : input) {
+            var value = parseObject(inputVal, iterable.valueType(), iterable);
             iterable.add(null, null, value, 1);
         }
         return iterable.build();
     }
 
+    //-------------------------------------------------------------------------
     private Object parseSimple(Object input, Class<?> type) {
-        if (input == null) {
-            if (type == double.class || type == Double.class) {
-                return Double.NaN;  // leniently accept null for NaN
-            } else if (type == float.class || type == Float.class) {
-                return Float.NaN;  // leniently accept null for NaN
-            } else {
-                return null;
-            }
-        }
-        if (input instanceof String) {
-            return convertText(input, type);
-        }
-        if (input instanceof Boolean) {
-            return input;
-        }
-        if (input instanceof Long) {
-            Long inputLong = (Long) input;
-            if (type == Long.class || type == long.class) {
-                return inputLong;
-            } else {
-                return convertInteger(inputLong.longValue(), type);
-            }
-        }
-        if (input instanceof Integer) {
-            Integer inputInteger = (Integer) input;
-            if (type == Integer.class || type == int.class) {
-                return inputInteger;
-            } else {
-                return convertInteger(inputInteger.longValue(), type);
-            }
-        }
-        if (input instanceof Double) {
-            Double inputDouble = (Double) input;
-            if (type == Double.class || type == double.class) {
-                return inputDouble;
-            } else if (type == Float.class || type == float.class) {
-                return inputDouble.floatValue();
-            } else {
-                return convertInteger(inputDouble.longValue(), type);
-            }
-        }
-        if (input instanceof Float) {
-            Float inputFloat = (Float) input;
-            if (type == Float.class || type == float.class) {
-                return inputFloat;
-            } else if (type == Double.class || type == double.class) {
-                return inputFloat.doubleValue();
-            } else {
-                return convertInteger(inputFloat.longValue(), type);
-            }
-        }
-        if (input instanceof Short || input instanceof Byte) {
-            return input;
-        }
-        throw new IllegalArgumentException("Invalid data: Expected simple type but found " + input);
+        return switch (input) {
+            case null -> convertNull(type);
+            case String s -> convertText(s, type);
+            case Boolean b -> input;
+            case Long l -> convertLong(l, type);
+            case Integer i -> convertInteger(i, type);
+            case Short s -> input;
+            case Byte b -> input;
+            case Double d -> convertDouble(d, type);
+            case Float f -> convertFloat(f, type);
+            default -> throw new IllegalArgumentException("Invalid data: Expected simple type but found " + input);
+        };
     }
 
-    private Object convertText(Object input, Class<?> type) {
+    private Object convertNull(Class<?> type) {
+        if (type == double.class || type == Double.class) {
+            return Double.NaN;  // leniently accept null for NaN
+        } else if (type == float.class || type == Float.class) {
+            return Float.NaN;  // leniently accept null for NaN
+        } else {
+            return null;
+        }
+    }
+
+    private Object convertText(String input, Class<?> type) {
         if (type == Object.class || type.isAssignableFrom(String.class)) {
             return input;
         }
-        return settings.getConverter().convertFromString(type, (String) input);
+        return settings.getConverter().convertFromString(type, input);
     }
 
+    private Object convertLong(Long inputLong, Class<?> type) {
+        if (type == Long.class || type == long.class) {
+            return inputLong;
+        } else {
+            return convertInteger(inputLong.longValue(), type);
+        }
+    }
+
+    private Object convertInteger(Integer inputInteger, Class<?> type) {
+        if (type == Integer.class || type == int.class) {
+            return inputInteger;
+        } else {
+            return convertInteger(inputInteger.longValue(), type);
+        }
+    }
+
+    private Object convertDouble(Double inputDouble, Class<?> type) {
+        if (type == Double.class || type == double.class) {
+            return inputDouble;
+        } else if (type == Float.class || type == float.class) {
+            return inputDouble.floatValue();
+        } else {
+            return convertInteger(inputDouble.longValue(), type);
+        }
+    }
+
+    private Object convertFloat(Float inputFloat, Class<?> type) {
+        if (type == Float.class || type == float.class) {
+            return inputFloat;
+        } else if (type == Double.class || type == double.class) {
+            return inputFloat.doubleValue();
+        } else {
+            return convertInteger(inputFloat.longValue(), type);
+        }
+    }
+
+    // converts the value we received to the type we desire
     private Object convertInteger(long value, Class<?> type) {
         if (type == Long.class || type == long.class) {
             return Long.valueOf(value);
@@ -344,14 +352,14 @@ public class JodaBeanSimpleMapReader {
             return Byte.valueOf((byte) value);
             
         } else if (type == Double.class || type == double.class) {
-            double dblVal = (double) value;
+            double dblVal = value;
             if (value != (long) dblVal) {
                 throw new IllegalArgumentException("Invalid data: Value exceeds capacity of double: " + value);
             }
             return Double.valueOf(dblVal);
             
         } else if (type == Float.class || type == float.class) {
-            float fltVal = (float) value;
+            float fltVal = value;
             if (value != (long) fltVal) {
                 throw new IllegalArgumentException("Invalid data: Value exceeds capacity of float: " + value);
             }
